# arya-core

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE  aryacore.go  commands.sh  config.go  config.json  coverage.txt  coverprofile.out  deps.bzl  go.mod  go.sum  main  main.go  readme.md  skaffold.yaml
cmd/: BUILD.bazel  demo.go  dev.go  main.go  root.go  start.go
cmd/migrations/: 20211104142153_cluster.go  20211104142206_telem.go
pkg/api/fiber/: BUILD.bazel  ws.go
pkg/auth/: BUILD.bazel  auth_suite_test.go  errors.go  errortype_string.go  hash.go  service.go  service_test.go  token.go  token_test.go
pkg/cluster/: BUILD.bazel  buf.gen.tag.yaml  buf.gen.yaml  buf.yaml  cluster.go  cluster_suite_test.go  pool.go  query_base.go  query_create.go  query_create_test.go  query_delete.go  query_delete_test.go  query_request.go  query_retrieve.go  query_retrieve_test.go  query_update.go  query_update_test.go  service.go  service_chain.go  service_chain_test.go  storage.go  storage_test.go
pkg/cluster/base/: base_suite_test.go  service.go  service_test.go
pkg/cluster/chanchunk/: BUILD.bazel  chanchunk.proto  chanchunk_suite_test.go  local.go  local_test.go  remote.go  remote_test.go  server.go  server_test.go  service.go  service_test.go
pkg/cluster/chanstream/: BUILD.bazel  chanstream_suite_test.go  local.go  local_stream_create.go  local_stream_retrieve.go  relay.go  remote.go  remote_stream_create.go  remote_stream_retrieve.go  server.go  service.go  service_test.go  stream_retrieve.go
pkg/cluster/internal/: query_request.go  queryvariant_string.go  service.go
pkg/cluster/mock/: BUILD.bazel  cluster.go  hook.go  persist.go  pool.go  service.go
pkg/cluster/rng/: local.go  service.go
pkg/dev/: BUILD.bazel  auth.go  cli.go  cluster.go  cluster_test.go  cmd.go  config.go  config_test.go  deployment.go  deployment_test.go  dev.go  dev_suite_test.go  docker.go  docker_test.go  reloader.go  tooling.go  tooling_test.go  vm.go  vm_test.go  watcher.go
pkg/models/: BUILD.bazel  auth.go  chan.go  channelconflictpolicy_string.go  channelstate_string.go  fields.go  hook.go  hook_test.go  hooks.go  models.go  models_suite_test.go  node.go  node_test.go  range.go  rng.go
pkg/query/: BUILD.bazel  close.go  parse.go  stream.go
pkg/query/chanchunk/: BUILD.bazel  stream_create.go  stream_retrieve.go
pkg/query/chanstream/: BUILD.bazel  create.go  retrieve.go
pkg/rpc/: BUILD.bazel  buf.gen.yaml  buf.yaml  model_exchange.go  model_exchange_test.go  pool.go  pool_test.go
pkg/rpc/mock/: pool.go
pkg/storage/: BUILD.bazel  base.go  config.go  create.go  create_test.go  engine.go  errors.go  errors_test.go  errortype_string.go  hook.go  model_adapter.go  model_adapter_test.go  model_exchange.go  model_exchange_test.go  models.go  models_test.go  object.go  opts.go  pool.go  pooler.go  pooler_test.go  query.go  query_base.go  query_create.go  query_create_test.go  query_delete.go  query_delete_test.go  query_migrate.go  query_retrieve.go  query_retrieve_test.go  query_ts_base.go  query_ts_create.go  query_ts_create_test.go  query_ts_retrieve.go  query_ts_retrieve_test.go  query_update.go  query_update_test.go  retrieve.go  retrieve_test.go  storage.go  (+5 more)
pkg/storage/engine/: engine.go
pkg/storage/heap_profiler/: memprof.2022-02-07T22_02_17.498.29419632.pprof  memprof.2022-02-07T22_02_27.498.34180544.pprof  memstats.2022-02-07T22_02_17.505.123600896.txt  memstats.2022-02-07T22_02_27.504.132009984.txt
pkg/storage/internal/: BUILD.bazel  adapter.go  engine.go  errors.go  handle.go  opts.go  pool.go
pkg/storage/minio/: BUILD.bazel  adapter.go  driver.go  driver_test.go  errors.go  exchange.go  minio.go  minio_suite_test.go  minio_test.go  model_adapter.go  model_exchange.go  model_wrapper.go  models.go  object.go  query.go  query_base.go  query_create.go  query_create_test.go  query_delete.go  query_delete_test.go  query_migrate.go  query_migrate_test.go  query_retrieve.go  query_retrieve_test.go  query_where_base.go  where_base_query.go
pkg/storage/mock/: BUILD.bazel  driver.go  metadata.go  models.go  object.go  storage.go
pkg/storage/redis/: BUILD.bazel  adapter.go  adapter_test.go  driver.go  driver_test.go  errors.go  exchange.go  model_adapter.go  model_exchange.go  models.go  query.go  query_base.go  query_create.go  query_retrieve.go  query_ts_base.go  query_ts_create.go  query_ts_create_test.go  query_ts_retrieve.go  query_ts_retrieve_test.go  redis.go  redis_suite_test.go  redis_test.go  reflect.go  ts_model_wrapper.go
pkg/storage/redists/: adapter.go  redists.go  redists_suite_test.go
pkg/storage/roach/: 20210505110026_migrate.go  BUILD.bazel  adapter.go  adapter_test.go  base.go  create.go  create_test.go  driver.go  driver_test.go  engine.go  engine_test.go  errors.go  hook.go  hook_test.go  migrate.go  migrate_test.go  migrator.go  migrator_test.go  models.go  query.go  query_base.go  query_create.go  query_create_test.go  query_delete.go  query_delete_test.go  query_migrate.go  query_migrate_test.go  query_retrieve.go  query_retrieve_test.go  query_update.go  query_update_test.go  retrieve.go  roach.go  roach_suite_test.go  roach_test.go  sql_gen.go  storage.go  tasks.go  tasks_test.go  validate.go
pkg/storage/stub/: metadata.go
pkg/storage/tasks/: scheduler.go  scheduler_test.go  tasks.go
pkg/telem/chanchunk/: BUILD.bazel  bulk.go  chanchunk.go  chanchunk_suite_test.go  chanchunk_test.go  create.go  observe.go  perf.go  query_stream_create.go  query_stream_create_test.go  service.go  service_test.go  stream_create.go  stream_create_test.go  stream_retrieve.go  stream_retrieve_test.go  timing.go  timing_test.go  timingerrortype_string.go
pkg/telem/chanstream/: BUILD.bazel  delta.go  observe.go  relay.go  service.go  stream_create.go  stream_create_test.go  stream_retrieve.go  stream_retrieve_test.go
pkg/telem/rng/: BUILD.bazel  allocate.go  allocate_test.go  observe.go  observe_test.go  persist.go  (+7 more)
pkg/ui/: BUILD.bazel  dist.go  index.html  package-lock.json  package.json  tsconfig.json  ui.go  ui_test.go  vite.config.ts
pkg/ws/: BUILD.bazel  ws.go
(+349 files in other folders)
