load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dev",
    srcs = [
        "auth.go",
        "cluster.go",
        "config.go",
        "deployment.go",
        "dev.go",
        "docker.go",
        "reloader.go",
        "tooling.go",
        "vm.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/dev",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/emoji",
        "//pkg/util/git",
        "//pkg/util/kubectl",
        "//pkg/util/watcher",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_hashicorp_go_version//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@sh_helm_helm_v3//pkg/action:go_default_library",
        "@sh_helm_helm_v3//pkg/chart:go_default_library",
        "@sh_helm_helm_v3//pkg/chart/loader:go_default_library",
        "@sh_helm_helm_v3//pkg/cli:go_default_library",
        "@sh_helm_helm_v3//pkg/cli/values:go_default_library",
        "@sh_helm_helm_v3//pkg/getter:go_default_library",
    ],
)

go_test(
    name = "dev_test",
    srcs = [
        "cluster_test.go",
        "config_test.go",
        "deployment_test.go",
        "dev_suite_test.go",
        "docker_test.go",
        "tooling_test.go",
        "vm_test.go",
    ],
    deps = [
        ":dev",
        "//pkg/util/kubectl",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
