load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = [
        "chan.go",
        "channelconflictpolicy_string.go",
        "channelstate_string.go",
        "hooks.go",
        "node.go",
        "range.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/models",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage",
        "//pkg/util/errutil",
        "//pkg/util/model",
        "//pkg/util/query",
        "//pkg/util/telem",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "models_test",
    srcs = [
        "models_suite_test.go",
        "node_test.go",
    ],
    deps = [
        ":models",
        "//pkg/util/query",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
