load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "query",
    srcs = [
        "parse.go",
        "stream.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/query",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/model",
        "//pkg/util/route",
        "@com_github_google_uuid//:uuid",
    ],
)
