load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ui",
    srcs = [
        "dist.go",
        "ui.go",
    ],
    embedsrcs = [
        "dist/assets/icon-full-title-white.0332f1eb.svg",
        "dist/assets/icon-full-title.baba8037.svg",
        "dist/assets/icon-gradient.598cc529.svg",
        "dist/assets/icon-white.7f3d6fdb.svg",
        "dist/assets/index.2bc107c6.css",
        "dist/assets/index.4ba85784.js",
        "dist/assets/roboto-all-300-normal.cbf6cb24.woff",
        "dist/assets/roboto-all-400-normal.55110586.woff",
        "dist/assets/roboto-all-500-normal.c93f4332.woff",
        "dist/assets/roboto-all-700-normal.61e16263.woff",
        "dist/assets/roboto-cyrillic-300-normal.fb83389e.woff2",
        "dist/assets/roboto-cyrillic-400-normal.8dd3b91c.woff2",
        "dist/assets/roboto-cyrillic-500-normal.2d2ad11e.woff2",
        "dist/assets/roboto-cyrillic-700-normal.053508cc.woff2",
        "dist/assets/roboto-cyrillic-ext-300-normal.ba7394e2.woff2",
        "dist/assets/roboto-cyrillic-ext-400-normal.78f525ec.woff2",
        "dist/assets/roboto-cyrillic-ext-500-normal.c9295226.woff2",
        "dist/assets/roboto-cyrillic-ext-700-normal.790da48c.woff2",
        "dist/assets/roboto-greek-300-normal.2bb7629c.woff2",
        "dist/assets/roboto-greek-400-normal.ede055d1.woff2",
        "dist/assets/roboto-greek-500-normal.d2ea238a.woff2",
        "dist/assets/roboto-greek-700-normal.6d6cdebe.woff2",
        "dist/assets/roboto-latin-300-normal.33530b00.woff2",
        "dist/assets/roboto-latin-400-normal.cc46322d.woff2",
        "dist/assets/roboto-latin-500-normal.bb46ed07.woff2",
        "dist/assets/roboto-latin-700-normal.0eaeadb5.woff2",
        "dist/assets/roboto-latin-ext-300-normal.b448446e.woff2",
        "dist/assets/roboto-latin-ext-400-normal.4e959d91.woff2",
        "dist/assets/roboto-latin-ext-500-normal.b48f2e02.woff2",
        "dist/assets/roboto-latin-ext-700-normal.336bb304.woff2",
        "dist/assets/roboto-vietnamese-300-normal.2ab35825.woff2",
        "dist/assets/roboto-vietnamese-400-normal.fb56f0e0.woff2",
        "dist/assets/roboto-vietnamese-500-normal.b03ef4b1.woff2",
        "dist/assets/roboto-vietnamese-700-normal.6ac62ad1.woff2",
        "dist/assets/vendor.de4270d2.js",
        "dist/index.html",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/ui",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gofiber_fiber_v2//:fiber"],
)

go_test(
    name = "ui_test",
    srcs = [
        "ui_suite_test.go",
        "ui_test.go",
    ],
    deps = [
        ":ui",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
