load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ws",
    srcs = ["ws.go"],
    importpath = "github.com/arya-analytics/aryacore/pkg/ws",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/query",
        "//pkg/util/errutil",
        "@com_github_gofiber_websocket_v2//:websocket",
        "@com_github_vmihailenco_msgpack_v5//:msgpack",
    ],
)
