load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = [
        "cluster.go",
        "pool.go",
        "service.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/cluster/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cluster",
        "//pkg/cluster/chanchunk",
        "//pkg/rpc",
        "//pkg/storage/mock",
        "//pkg/util/query",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)
