load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = [
        "cluster.go",
        "hook.go",
        "persist.go",
        "pool.go",
        "service.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/cluster/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cluster",
        "//pkg/cluster/chanchunk",
        "//pkg/models",
        "//pkg/rpc",
        "//pkg/storage/mock",
        "//pkg/util/model",
        "//pkg/util/query",
        "//pkg/util/query/mock",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
