load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "chanchunk",
    srcs = [
        "stream_create.go",
        "stream_retrieve.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/query/chanchunk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/query",
        "//pkg/telem/chanchunk",
        "//pkg/util/query/streamq",
        "//pkg/util/telem",
        "@com_github_google_uuid//:uuid",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sync//errgroup",
    ],
)
