load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "engine.go",
        "errors.go",
        "handle.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/storage/internal",
    visibility = ["//pkg/storage:__subpackages__"],
    deps = [
        "//pkg/util/model",
        "//pkg/util/query",
        "//pkg/util/query/streamq",
        "//pkg/util/tasks",
    ],
)
