load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = [
        "adapter.go",
        "driver.go",
        "errors.go",
        "exchange.go",
        "models.go",
        "query_base.go",
        "query_ts_create.go",
        "query_ts_retrieve.go",
        "redis.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage",
        "//pkg/storage/internal",
        "//pkg/storage/redis/timeseries",
        "//pkg/util/errutil",
        "//pkg/util/model",
        "//pkg/util/query",
        "//pkg/util/telem",
        "//pkg/util/validate",
        "@com_github_go_redis_redis_v8//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_test(
    name = "redis_test",
    srcs = [
        "driver_test.go",
        "query_ts_create_test.go",
        "query_ts_retrieve_test.go",
        "redis_suite_test.go",
        "redis_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":redis",
        "//pkg/models",
        "//pkg/storage",
        "//pkg/storage/internal",
        "//pkg/storage/mock",
        "//pkg/util/query",
        "//pkg/util/telem",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
