load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = [
        "adapter.go",
        "driver.go",
        "errors.go",
        "exchange.go",
        "models.go",
        "query.go",
        "redis.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage",
        "//pkg/storage/internal",
        "//pkg/storage/redis/timeseries",
        "//pkg/util/errutil",
        "//pkg/util/model",
        "//pkg/util/pool",
        "//pkg/util/query",
        "//pkg/util/query/streamq",
        "//pkg/util/telem",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_google_uuid//:uuid",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "redis_test",
    srcs = [
        "driver_test.go",
        "query_ts_create_test.go",
        "query_ts_retrieve_test.go",
        "redis_suite_test.go",
        "redis_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":redis",
        "//pkg/models",
        "//pkg/storage/mock",
        "//pkg/util/pool",
        "//pkg/util/query",
        "//pkg/util/telem",
        "@com_github_google_uuid//:uuid",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_spf13_viper//:viper",
    ],
)
