load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "roach",
    srcs = [
        "20210505110026_migrate.go",
        "adapter.go",
        "driver.go",
        "errors.go",
        "hook.go",
        "models.go",
        "query.go",
        "roach.go",
        "sql_gen.go",
        "tasks.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/storage/roach",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models",
        "//pkg/storage",
        "//pkg/storage/internal",
        "//pkg/util/caseconv",
        "//pkg/util/errutil",
        "//pkg/util/model",
        "//pkg/util/pg",
        "//pkg/util/query",
        "//pkg/util/tasks",
        "//pkg/util/telem",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_uptrace_bun//:go_default_library",
        "@com_github_uptrace_bun//migrate:go_default_library",
        "@com_github_uptrace_bun//schema:go_default_library",
        "@com_github_uptrace_bun_dialect_pgdialect//:go_default_library",
        "@com_github_uptrace_bun_driver_pgdriver//:go_default_library",
        "@com_github_uptrace_bun_extra_bundebug//:go_default_library",
    ],
)

go_test(
    name = "roach_test",
    srcs = [
        "driver_test.go",
        "hook_test.go",
        "query_create_test.go",
        "query_delete_test.go",
        "query_migrate_test.go",
        "query_retrieve_test.go",
        "query_update_test.go",
        "roach_suite_test.go",
        "roach_test.go",
        "tasks_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":roach",
        "//pkg/models",
        "//pkg/storage",
        "//pkg/storage/internal",
        "//pkg/storage/mock",
        "//pkg/util/model",
        "//pkg/util/query",
        "//pkg/util/tasks",
        "//pkg/util/telem",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
