load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "chanstream",
    srcs = [
        "observe.go",
        "relay.go",
        "service.go",
    ],
    importpath = "github.com/arya-analytics/aryacore/pkg/telem/chanstream",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/models",
        "//pkg/util/model",
        "//pkg/util/model/filter",
        "//pkg/util/query",
        "//pkg/util/telem",
    ],
)
